fix  phone size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ h2{
 
 p{
 color: rgb(136, 187, 187);
-font-size: 2vw;
+font-size:150%;
 margin-top: 0%;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 margin-left: 10%;
